<resources>
    <string name="app_name">TP2</string>
    <string name="button">Button</string>
    <string name="bienvenido">¡Bienvenido a COVIDLess!</string>
    <string name="sin_usuario_textview">¿No tenés usuario?</string>
    <string name="covidless_textview">COVIDLess</string>
    <string name="indicar_mail_textview">Para empezar, indique su mail:</string>
    <string name="notificar_envio_mail_textview">Le enviaremos a su mail un código para ingresar</string>
    <string name="enviar_codigo_boton_text">Enviar código</string>
    <string name="ingresar_codigo">Ingrese el código que le llegó al mail</string>
    <string name="continuar">Continuar</string>
    <string name="seleccione_lugar">Seleccione el lugar que desea visitar para conocer sus requisitos:</string>
    <string name="ver_metricas">Ver métricas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="cantidad_logueos">Cantidad de logueos por franja horaria:</string>
    <string name="cantidad_visitas">Cantidad de visitas a cada lugar:</string>
    <string name="leyenda_lugar">Usted ha seleccionado: </string>
    <string name="leyenda_requisitos">Requisitos para ingresar: </string>
    <string name="leyenda_continuar">Si cumplis con todos los requisitos, agitá tu celu y presioná continuar</string>
    <string name="leyenda_tenes_todo">Genial! Ya tenes todo lo que necesitas? </string>
    <string name="leyenda_tempertura">Ahora vamos a tomar la temperatura del ambiente.
                Solo es recomendable salir de tu casa si la temperatura es mayor a 20°C,
                ya que el virus se propaga más lentamente en verano</string>
    <string name="leyenda_final">Todo listo! Disfruta tu actividad, y recorda que cuidandote, nos cuidas a todos</string>
    <string name="leyenda_gracias">Gracias por utilizar CovidLess</string>
    <string name="volver_main">Menú Principal</string>
    <string name="ir">Ir</string>
    <string name="APIEnvoriment">PROD</string>
    <string name="retrofit_server">http://so-unlam.net.ar/api/</string>

    <string-array name="comisiones">
        <item>Comisión</item>
        <item>2900 - Martes</item>
        <item>3900 - Miércoles</item>
    </string-array>

    <string name="lista_lugares">ListView</string>
    <string-array name="lista_places">
        <item>Cine/Teatro</item>
        <item>Cancha</item>
        <item>Vuelos nacionales</item>
        <item>Vuelos internacionales</item>
    </string-array>


</resources>

